@@ -1,7 +1,6 @@
 plugins {
     id 'java'
     id 'maven-publish'
-    id 'application'
     id 'org.openjfx.javafxplugin' version '0.0.10'
     id 'org.beryx.jlink' version '2.24.1'
     id 'org.jetbrains.kotlin.jvm'
@@ -12,11 +11,6 @@ version '0.1'
 
 sourceCompatibility = "1.9"
 targetCompatibility = "1.9"
-
-application {
-    mainClass = 'com.mcreater.fluentdemo.Main'
-    applicationDefaultJvmArgs = ["-XX:+UseZGC", "--add-opens", "java.base/java.lang=ALL-UNNAMED", "-Xmx320M"]
-}
 
 repositories {
     mavenCentral()
